# cookiecutter-py

./: Makefile  Pipfile  README.md  cookiecutter.json  pyproject.toml  renovate.json
.circleci/: config.yml
.github/workflows/: ci.yaml  ci.yml
tests/: test_bake.py
{{ cookiecutter.project_slug }}/: Makefile  Pipfile  pyproject.toml  tox.ini
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yaml  ci.yml  dependabot.yml
{{ cookiecutter.project_slug }}/tests/: test_{{ cookiecutter.project_slug }}.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: cli.py
