[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_description }}"
{% if cookiecutter.author_name and cookiecutter.author_email -%}
authors = [
  {name = {{ cookiecutter.author_name }}, email = {{ cookiecutter.author_email }}}
]
{%- endif %}
readme = "README.md"
version = "{{ cookiecutter.version }}"
requires-python = ">={{ cookiecutter.python_version }}"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers"
]
keywords = ["{{ cookiecutter.project_slug }}"]

[project.urls]
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

{% if cookiecutter.project_category == "Command-Line" -%}
[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli:main"
{%- endif %}

[tool.black]
line-length = 120
target-version = ["{{ cookiecutter.black_target }}"]

[tool.flake8]
max-line-length = 120
ignore = [
  "E203",
  "W503",
  "W504"
]
statistics = true

[tool.mypy]
ignore_missing_imports = true