[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_description }}"
{% if cookiecutter.author_name and cookiecutter.author_email -%}
authors = [{ name = {{ cookiecutter.author_name }}, email = {{ cookiecutter.author_email }} }]
{%- endif %}
readme = "README.md"
version = "{{ cookiecutter.version }}"
requires-python = ">={{ cookiecutter.python_version }}"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers"
]
keywords = ["{{ cookiecutter.project_slug }}"]

[project.urls]
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

{% if cookiecutter.project_category == "Command-Line" -%}
[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli:main"
{%- endif %}

[tool.ruff]
select = [
  "F", # pyflakes
  "I", # isort
  "E", # pydocstyle
  "D",
  "W",
]
ignore = ["D203", "D212"]
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".tox",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    ".ropeproject",
    ".pytest_cache",
    "__pycache__",
    ".coverage",
]
line-length = 120
target-version = "py312"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"**/{tests,doc}/*" = ["D"]

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ["{{ cookiecutter.black_target }}"]
